added background image to the body

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    background-image:url('./images/Cooking-at-Home.jpeg');
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .homepage-heading,
 h1{
   
