added background image from the web to the body

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('./images/Cooking-at-Home.jpeg');
+    background-image:url('https://www.helpguide.org/wp-content/uploads/2023/02/Cooking-at-Home.jpeg');
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
