--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+html{
     background-image:url('https://www.helpguide.org/wp-content/uploads/2023/02/Cooking-at-Home.jpeg');
     background-attachment:fixed;
 
